Home page alignment issue solved

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,201 +1,54 @@
-.customSearchBarWrapper {
-  width: 100%;
-}
-
-
-.mheader{
-  display: flex;
-  justify-content: center;
-}
-.user-header {
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-/* 
-.dflex-C {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-} */
-
-
-
-.lmslogo img{
-  width: 80px;
+.lmslogo img {
+  width: 100px;
   border-radius: 10px;
-  margin-left: 20px;
 }
-
-li {
-  list-style: none;
-  
-}
-
-a, i {
-  text-decoration: none;
-  color: #010101;
-  font-size: 1rem;
-}
-
-a:hover {
-  color: #e65100;
-}
-
 .navbar {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: 40px;
-  max-width: 1200px;
-  margin: 0 auto;
+  align-items: center;
+  background-color: #d0d0d0;
+  padding: 10px 10px;
+  
   
 }
 
-.navbar .log a {
-  font-size: 1.5rem;
-}
-
-.navbar .links {
+.navbar .nav-links  {
   display: flex;
-  gap: 3rem;
+  list-style: none;
+  
+  justify-content: end;
 }
 
-.navbar .toggle_btn {
-  color: #fcfbfb;
-  font-size: 1.5rem;
-  cursor: pointer;
-  display: none;
-  margin-left: 10px;
-}
-
-.action_btn {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(250, 121, 0);
-  color: #ebebeb;
-  padding: 0.5rem 1rem;
-  border: none;
-  outline: none;
-  border-radius: 20px;
-  font-size: 0.8rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: scale 0.2 ease;
-  margin-right: 10px;
-}
-
-.action_btn:hover {
-  scale: 1.05;
-  color: #fff;
-}
-
-.action_btn:active {
-  scale: 0.95;
-}
-
-/*drop dwon menu*/
-.dropdown_menu {
-  /* display: none; */
-  position: absolute;
-  right: 2rem;
-  top: 60px;
-  height:350;
-  width: 300px;
-  background-color: rgba(40, 40, 40, 0.3);
-  backdrop-filter: blur(5px);
-  border-radius: 10px;
-  overflow: hidden;
-  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.dropdown_menu li {
-  padding: 0.7rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.dropdown_menu .action_btn {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.actionbuttongroup{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-}
-
-.dropdown {
-  float: left;
-  overflow: visible;
-}
-
-.dropdown .dropbtn {
-  font-size: 1rem;  
-  border: none;
-  outline: none;
-  color: #022e3b;
-  /* padding: 14px 16px; */
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-/* .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-} */
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
+.navbar .nav-links div a{
+  color: rgb(49, 49, 49);
   text-decoration: none;
-  display: block;
-  text-align: left;
+  font-size: 18px;
+  margin: 0 10px;
+  width: 100%;
+  
+  
 }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+@media (max-width: 768px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-
-@media (max-width: 992px) {
-  .navbar .links,
-  .navbar .action_btn {
-    display: none;
   }
-  .navbar .toggle_btn {
-    display: block;
+  .navbar .nav-links {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
   }
-  .dropdown_menu {
-    display: block;
-  }
-}
- 
-@media (max-width: 576px) {
-  .dropdown_menu {
-    left: 2rem;
-    width: unset;
+  .navbar .nav-links div {
+    width: 100%;
+    color: rgb(49, 49, 49);
+    text-decoration: none;
+    font-size: 15px;
+    margin-left: auto;
+    text-align: center;
+   
   }
 }
-
